--- a/css/style.css
+++ b/css/style.css
@@ -37,6 +37,10 @@
 }
 .burger {
     display: none;
+    color: #5863F8;
+    width: 50px;
+    height: 50px;
+    font-size: 20px;
 }
 .navul {
     display: flex;
